Adding the third paragraph

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <h1>UECS2363 Homepage</h1>
     <p>The first paragraph</p>
     <p>The second paragraph</p>
+    <p>The third paragraph</p>
   </body>
 </html>
     
