Added the footer

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <p>The second paragraph</p>
     <p>The third paragraph</p>
   </body>
+  <footer>
+    This is done by Lawrence
+  </footer>
 </html>
     
